# roq-udp-subscriber

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
benchmark/: .gitignore  CMakeLists.txt
conda/: build.sh  meta.yaml
share/: config.toml
share/flags/test/: flags.cfg
src/roq/: CMakeLists.txt
src/roq/udp_subscriber/: .gitignore  CMakeLists.txt  application.cpp  application.hpp  buffer.cpp  buffer.hpp  config.cpp  config.hpp  fbs_parser.cpp  fbs_parser.hpp  flags.cpp  flags.hpp  gateway.cpp  gateway.hpp  header.hpp  incremental.cpp  incremental.hpp  index.rst  json_parser.cpp  json_parser.hpp  listener.cpp  listener.hpp  main.cpp  parser.cpp  parser.hpp  parser_factory.cpp  parser_factory.hpp  reader.cpp  reader.hpp  settings.cpp  settings.hpp  shared.cpp  shared.hpp  snapshot.cpp  snapshot.hpp  test.sh
src/roq/udp_subscriber/benchmark/: CMakeLists.txt
src/roq/udp_subscriber/config/: subscriber.toml
src/roq/udp_subscriber/flags/: .gitignore  CMakeLists.txt  common.json  flags.json  misc.json  settings.cpp  settings.hpp
src/roq/udp_subscriber/gateway/: CMakeLists.txt  config.cpp  config.hpp  controller.cpp  controller.hpp  fbs_parser.cpp  fbs_parser.hpp  incremental.cpp  incremental.hpp  parser.cpp  parser.hpp  reader.cpp  reader.hpp  settings.hpp  shared.cpp  shared.hpp  snapshot.cpp  snapshot.hpp
src/roq/udp_subscriber/test/: CMakeLists.txt  buffer.cpp
src/roq/udp_subscriber/tools/: CMakeLists.txt  buffer.cpp  buffer.hpp  header.hpp
test/: .gitignore  CMakeLists.txt  buffer.cpp  dummy.cpp
